cmake_minimum_required(VERSION 3.16)
project(20211014)

set(CMAKE_CXX_STANDARD 14)

add_executable(1308 1308.cpp)
add_executable(1309 1309.cpp)
add_executable(1355 1355.cpp)
add_executable(4258 4258.cpp)
add_executable(1367 1367.cpp)
add_executable(1368 1368.cpp)
add_executable(1368_Revised 1368_Revised.cpp)
add_executable(data data.cpp)
add_executable(1371 1371.cpp)
add_executable(1371_Revised 1371_Revised.cpp)
add_executable(1372 1372.cpp)
add_executable(1375 1375.cpp)
add_executable(1366 1366.cpp)
add_executable(20211025T3 20211025T3.cpp)
add_executable(20211025T3_Revised 20211025T3_Revised.cpp)