cmake_minimum_required(VERSION 3.16)
project(20211026)

set(CMAKE_CXX_STANDARD 17)


add_executable(1327 1327.cpp)
add_executable(1328 1328.cpp)
add_executable(1279 1279.cpp)
add_executable(1280 1280.cpp)
add_executable(1283 1283.cpp)
add_executable(1285 1285.cpp)

add_executable(main 1351/main.cpp)

add_executable(1009 1009.cpp)
add_executable(1010 1010.cpp)
add_executable(1011 1011.cpp)
add_executable(20211028_1 20211028_1.cpp)
add_executable(20211028_2 20211028_2.cpp)
add_executable(ICPC_Debug ICPC_Debug.cpp)