cmake_minimum_required(VERSION 3.16)
project(20211108)

set(CMAKE_CXX_STANDARD 14)

add_executable(1409 1409.cpp)
add_executable(1408 1408.cpp)
add_executable(1038 1038.cpp)
add_executable(1312 1312.cpp)
add_executable(1313 1313.cpp)
add_executable(data data.cpp)
add_executable(1312_R 1312_R.cpp)
add_executable(1363 1363.cpp)
add_executable(1287 1287.cpp)
add_executable(1292 1292.cpp)
add_executable(1293 1293.cpp)
add_executable(1415 1415.cpp)
add_executable(1416 1416.cpp)
add_executable(1379 1379.cpp)
add_executable(P3916 P3916.cpp)
add_executable(P1294 P1294.cpp)
add_executable(P4017 P4017.cpp)
add_executable(P3958 P3958.cpp)
add_executable(P6591 P6591.cpp)